force-app/main/default/objects/ODataAttributes__c/ODataAttributes__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>OData Attributes</label>
</CustomObject>