force-app/main/default/objects/ODataAttributes__c/fields/ESBSubscrptionKey__c.field-meta.xml
<CustomField>
    <fullName>ESBSubscrptionKey__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ESBSubscrptionKey</label>
    <length>50</length>
    <type>Text</type>
</CustomField>