force-app/main/default/objects/ODataAttributes__c/fields/OcpApimSubscriptionKey__c.field-meta.xml
<CustomField>
    <fullName>OcpApimSubscriptionKey__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OcpApimSubscriptionKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>