force-app/main/default/objects/ODataAttributes__c/fields/OcpApimTrace__c.field-meta.xml
<CustomField>
    <fullName>OcpApimTrace__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OcpApimTrace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>