force-app/main/default/objects/ODataAttributes__c/fields/XSegKey__c.field-meta.xml
<CustomField>
    <fullName>XSegKey__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>X Seg Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>